--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 
 <footer class="container-fluid bg-4 text-center">
   <h4>Contact Me</h4>
-            <ul class='list-unstyled'>
-              <li><a href='mailto:brian9328hk@gmail.com'>By E-mail</a></li>
+            <ul class='list-unstyled footer'>
+              <li><a href='mailto:brian9328hk@gmail.com'>E-mail</a></li>
+              <li><a href='https://www.facebook.com/brianlaw033'>Facebook</a></li>
+              <li><a href='https://www.instagram.com/blaw033/'>Instagram</a></li>
             </ul>
 </footer>
-
-
 	</body>
 </html>
