--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
       <link type="text/css" rel="stylesheet" href="main.css">
       <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-      <script src='js/bootstrap.js'></script>
+      <script src="https://github.com/brianlaw033/personal-page/js/bootstrap.js"></script>
       <title>About Brian</title>
     </head>
 
