--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div id='about-me'class="container-fluid bg-2 text-center">
           <h3 class="margin">About me</h3>
-          <p class='margin'>This is Brian from Hong Kong ! </p>
+          <p class='margin'>This is Brian from Hong Kong ! !</p>
         </div>
 
 <!-- Album-->
