--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
       <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
       <link type="text/css" rel="stylesheet" href="main.css">
       <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-      <script src="https://rawgit.com/h5bp/html5-boilerplate/master/src/js/plugins.js"></script>
+      <script src='js/bootstrap.js'></script>
+      <script type='text/javascript' src='main.js'></script>
       <title>About Brian</title>
     </head>
 
@@ -44,8 +45,8 @@
 <!-- Second Container -->
 
         <div id='about-me'class="container-fluid bg-2 text-center">
-          <h3 class="margin">About me</h3>
-          <p class='margin'>This is Brian from Hong Kong ! !</p>
+          <h3 class="margin">Who is Brian?</h3>
+          <p class='margin'> I'm Brian from Hong Kong. </p>
         </div>
 
 <!-- Album-->
@@ -65,18 +66,30 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <img class='img-responsive img-center'src='https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/10957141_10153275770610555_3797583137397437335_n.jpg?oh=2ff3dffdc5cddbe5fe10b9abb1a48280&oe=591218A4'/>
+        <div class="carousel-caption">
+          <p> Me in Thailand feeding lambs </p>
+        </div>
       </div>
 
       <div class="item">
         <img class='img-responsive img-center'src='https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/10171150_10152460436735555_4538533736344156343_n.jpg?oh=64080303e111f7d2aef3e8d69185004d&oe=5918CDF4'/>
+        <div class="carousel-caption">
+          <p> Me in Liverpool 13/14 Home Jersey </p>
+        </div>
       </div>
 
       <div class="item">
         <img class='img-responsive img-center' src="https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/16114620_10154936421544717_188678529949669585_n.jpg?oh=53a9f5e6ccf701297c51a0db6088d6d4&oe=591579CC"/>
+        <div class="carousel-caption">
+          <p> Bb (My cat's name)</p>
+        </div>
       </div>
 
       <div class="item">
         <img class='img-responsive img-center' src="https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/734829_10153790630909717_2298399475421750177_n.jpg?oh=ac438ec011dc0e3d0b8df367d2858273&oe=590FBABF"/>
+        <div class="carousel-caption">
+          <p> Bb in my girlfriend's arm </p>
+        </div>
       </div>
     </div>
 
@@ -103,5 +116,7 @@
               <li><a href='https://www.instagram.com/blaw033/'>Instagram</a></li>
             </ul>
 </footer>
+
+
 	</body>
 </html>
