--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
       <link type="text/css" rel="stylesheet" href="main.css">
-      <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+      <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <title>About Brian</title>
     </head>
