--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <meta charset="utf-8">
-      <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
-      <link type="text/css" rel="stylesheet" href="main.css">
-      <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <meta charset='utf-8'>
+      <link type='text/css' rel='stylesheet' href='css/bootstrap.css'>
+      <link type='text/css' rel='stylesheet' href='main.css'>
+      <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+      <script src='js/bootstrap.js'></script>
+      <script type='text/javascript' src='main.js'></script>
       <title>About Brian</title>
     </head>
 
-    <body data-spy="scroll" >
+    <body data-spy='scroll' >
 
 <!-- Navbar -->
 
         <nav class='navbar navbar-default navbar-fixed-top'>
           <div class='container'>
             <div class='navbar-header'>
-              <a href='index.html' class='navbar-brand'>About Brian</a>
+              <a href='index.html' class='navbar-brand'>Brian Law</a>
               <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'>
                 <span class='sr-only'>Toggle navigation</span>
                 <span class='icon-bar'></span>
@@ -34,72 +35,72 @@
 
 <!-- First Container-->
 
-        <div id='intro'class="container-fluid bg-1 text-center">
-            <h3 class="margin">Who Am I?</h3>
-            <img src="https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/16174540_10155034936160555_2731918811145507451_n.jpg?oh=6035d6bcdd4364943f036c4a5e8155fe&oe=590C5C8F" class="img-circle img-responsive img-center" width="350" height="350">
+        <div id='intro'class='container-fluid bg-1 text-center'>
+            <h3 class='margin'>Who Am I?</h3>
+            <img src='https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/16174540_10155034936160555_2731918811145507451_n.jpg?oh=6035d6bcdd4364943f036c4a5e8155fe&oe=590C5C8F' class='img-circle img-responsive img-center' width='350' height='350'>
             <br>
             <h3>I'm a Cat-lover (貓奴) + Future Software Engineer !</h3>
         </div>
 
 <!-- Second Container -->
 
-        <div id='about-me'class="container-fluid bg-2 text-center">
-          <h3 class="margin">Who is Brian?</h3>
+        <div id='about-me'class='container-fluid bg-2 text-center'>
+          <h3 class='margin'>Who is Brian?</h3>
           <p class='margin'> I'm Brian from Hong Kong. </p>
         </div>
 
 <!-- Album-->
 
-<div id='album'class="container-fluid bg-3 text-center">
-  <h3 class="margin">My Photos</h3>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div id='album'class='container-fluid bg-3 text-center'>
+  <h3 class='margin'>My Photos</h3>
+  <div id='myAlbum' class='carousel slide' data-ride='carousel'>
     <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
+    <ol class='carousel-indicators'>
+      <li data-target='#myAlbum' data-slide-to='0' class='active'></li>
+      <li data-target='#myAlbum' data-slide-to='1'></li>
+      <li data-target='#myAlbum' data-slide-to='2'></li>
+      <li data-target='#myAlbum' data-slide-to='3'></li>
     </ol>
 
     <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
+    <div class='carousel-inner' role='listbox'>
+      <div class='item active'>
         <img class='img-responsive img-center'src='https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/10957141_10153275770610555_3797583137397437335_n.jpg?oh=2ff3dffdc5cddbe5fe10b9abb1a48280&oe=591218A4'/>
-        <div class="carousel-caption">
+        <div class='carousel-caption'>
           <p> Me in Thailand feeding lambs </p>
         </div>
       </div>
 
-      <div class="item">
+      <div class='item'>
         <img class='img-responsive img-center'src='https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/10171150_10152460436735555_4538533736344156343_n.jpg?oh=64080303e111f7d2aef3e8d69185004d&oe=5918CDF4'/>
-        <div class="carousel-caption">
+        <div class='carousel-caption'>
           <p> Me in Liverpool 13/14 Home Jersey </p>
         </div>
       </div>
 
-      <div class="item">
-        <img class='img-responsive img-center' src="https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/16114620_10154936421544717_188678529949669585_n.jpg?oh=53a9f5e6ccf701297c51a0db6088d6d4&oe=591579CC"/>
-        <div class="carousel-caption">
+      <div class='item'>
+        <img class='img-responsive img-center' src='https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/16114620_10154936421544717_188678529949669585_n.jpg?oh=53a9f5e6ccf701297c51a0db6088d6d4&oe=591579CC'/>
+        <div class='carousel-caption'>
           <p> Bb (My cat's name)</p>
         </div>
       </div>
 
-      <div class="item">
-        <img class='img-responsive img-center' src="https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/734829_10153790630909717_2298399475421750177_n.jpg?oh=ac438ec011dc0e3d0b8df367d2858273&oe=590FBABF"/>
-        <div class="carousel-caption">
+      <div class='item'>
+        <img class='img-responsive img-center' src='https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/734829_10153790630909717_2298399475421750177_n.jpg?oh=ac438ec011dc0e3d0b8df367d2858273&oe=590FBABF'/>
+        <div class='carousel-caption'>
           <p> Bb in my girlfriend's arm </p>
         </div>
       </div>
     </div>
 
     <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
+    <a class='left carousel-control' href='#myAlbum' role='button' data-slide='prev'>
+      <span class='glyphicon glyphicon-chevron-left' aria-hidden='true'></span>
+      <span class='sr-only'>Previous</span>
     </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
+    <a class='right carousel-control' href='#myAlbum' role='button' data-slide='next'>
+      <span class='glyphicon glyphicon-chevron-right' aria-hidden='true'></span>
+      <span class='sr-only'>Next</span>
     </a>
 
   </div>
@@ -107,7 +108,7 @@
 
 <!-- Footer -->
 
-<footer class="container-fluid bg-4 text-center">
+<footer class='container-fluid bg-4 text-center'>
   <h4>Contact Me</h4>
             <ul class='list-unstyled footer'>
               <li><a href='mailto:brian9328hk@gmail.com'>E-mail</a></li>
