--- a/index.html
+++ b/index.html
@@ -39,14 +39,23 @@
             <h3 class='margin'>Who Am I?</h3>
             <img src='https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/16174540_10155034936160555_2731918811145507451_n.jpg?oh=6035d6bcdd4364943f036c4a5e8155fe&oe=590C5C8F' class='img-circle img-responsive img-center' width='350' height='350'>
             <br>
-            <h3>I'm a Cat-lover (貓奴) + Future Software Engineer !</h3>
+            <h3>I'm a Cat-lover (貓奴) !</h3>
         </div>
 
 <!-- Second Container -->
 
         <div id='about-me'class='container-fluid bg-2 text-center'>
           <h3 class='margin'>Who is Brian?</h3>
-          <p class='margin'> I'm Brian from Hong Kong. </p>
+          <div class='container'>
+            <p class='margin'> Just a ordinary man from Hong Kong who just kickstarted his software engineering career by joining a coding bootcamp.</p>
+          <br>
+          <h4 class='margin'>My Past</h4>
+            <p class='margin'>Recently graduated from City University of Hong Kong, worked in a local bank after graduated for around 6 months.</p>
+          <br>
+          <h4 class='margin'>BB</h4>
+            <p class='margin'>My lovely cat, she's 1.5 years old at the moment, adopted by me andmy girl firend when she's 3 months old. A beatiful British Shorthair you can see from my album, she's gorgerous!</p>
+          
+        </div>
         </div>
 
 <!-- Album-->
