fixing amrgin between photos and p

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div id='intro'class='container-fluid bg-1 text-center'>
             <h3 class='margin'>Who Am I?</h3>
-            <img src='https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/16174540_10155034936160555_2731918811145507451_n.jpg?oh=6035d6bcdd4364943f036c4a5e8155fe&oe=590C5C8F' class='img-circle img-responsive img-center' width='350' height='350'>
+            <img src='photo/bb.jpg' class='img-circle img-responsive img-center' width='350' height='350'>
             <br>
             <h3>I'm a Cat-lover (貓奴) !</h3>
         </div>
@@ -46,15 +46,17 @@
 
         <div id='about-me'class='container-fluid bg-2 text-center'>
           <h3 class='margin'>Who is Brian?</h3>
+          <img src='photo/6C.jpg' class='img-circle img-responsive img-center' width='150' height='150'>
+
           <div class='container'>
-            <p class='margin'> Just a ordinary man from Hong Kong who just kickstarted his software engineering career by joining a coding bootcamp.</p>
-          <br>
+            <p class='margin margin-top'> Just a ordinary man from Hong Kong who just kickstarted his software engineering career by joining a coding bootcamp.</p>
           <h4 class='margin'>My Past</h4>
-            <p class='margin'>Recently graduated from City University of Hong Kong, worked in a local bank after graduated for around 6 months.</p>
-          <br>
+          <img src='photo/ramen.jpg' class='img-circle img-responsive img-center' width='150' height='150'>
+            <p class='margin margin-top'>Recently graduated from City University of Hong Kong, worked in a local bank after graduated for around 6 months.</p>
           <h4 class='margin'>BB</h4>
-            <p class='margin'>My lovely cat, she's 1.5 years old at the moment, adopted by me andmy girl firend when she's 3 months old. A beatiful British Shorthair you can see from my album, she's gorgerous!</p>
-          
+          <img src='photo/bb2.jpg' class='img-circle img-responsive img-center' width='150' height='150'>
+            <p class='margin margin-top'>My lovely cat, she's 1.5 years old at the moment, adopted by me andmy girl firend when she's 3 months old. A beatiful British Shorthair you can see from my album, she's gorgerous!</p>
+
         </div>
         </div>
 
